assets/scss/style.scss
/* ... */
.about-menu {

  font-size: 15px;

  .UnderlineNav-item[aria-current]:not([aria-current=false]) {
    font-weight: 500;
    svg {
      color: var(--color-fg-default) !important;
    }
  }

  .menu-item[aria-current]:not([aria-current=false]) {
    font-weight: 500;
    svg {
      color: var(--color-fg-default) !important;
    }
  }

  .menu-item[aria-current]:not([aria-current=false]) {
    background-color: var(--color-accent-subtle) !important
  }
}

.inline-note {

  @media (max-width: 600px) {
    .highlight pre.chroma {
      margin-left: initial !important;
      margin-right: initial !important;
      border-radius: 10px !important;
      border: 1px solid var(--color-border-muted) !important;
    }
  }

  border-left: 6px solid;
  border-right: 6px solid;
  border-right-color: transparent !important;
  p {
    margin-bottom: 8px;
  }
  & > :last-child {
    margin-bottom: 0 !important;
  }
  &.info {
    background-color: var(--color-accent-subtle);
    border-color: var(--color-accent-muted);
  }
  &.warning {
    font-weight: normal;
    background-color: var(--color-attention-subtle);
    border-color: var(--color-attention-muted);
  }
  &.danger {
    background-color: var(--color-danger-subtle);
    border-color: var(--color-danger-muted);
  }
  &.success {
    background-color: var(--color-success-subtle);
    border-color: var(--color-success-muted);
  }
  &.done {
    background-color: var(--color-done-subtle);
    border-color: var(--color-done-muted);
  }
}

.columns {
  &:not(:first-of-type) {
    margin-top: 15px;
  }
  .column {
    h2, h3, h4 {
      border-bottom: none;
      margin-top: 0;
      padding-bottom: 0;
      margin-bottom: 12px;
    }
    .right {
      margin-left: 16px;
    }
    .left {
      margin-right: 16px;
    }
  }
  @media (max-width: 600px) {
    flex-direction: column;
    .column {
      .right {
        margin-top: 15px;
        margin-left: 0;
      }
      .left {
        margin-right: 0;
      }
    }
  }
}

.bold-default-color {
  li {
    color: var(--color-fg-muted);
    strong {
      font-weight: 450;
      color: var(--color-fg-default);
    }
  }
  a {
    color: var(--color-fg-muted);
    text-decoration: underline;
    text-underline-offset: .1rem;
    &:hover {
        color: var(--color-accent-fg);
    }
  }
}

.hmsubhead {

  a svg path, a svg circle {
    transition: .3s;
  }

  a:hover svg path, a:hover svg circle {
    opacity: 0.7;
  }

  .mb-gentle {
    margin-bottom: 12px;
    @media (max-width: 600px) {
      margin-bottom: 15px;
    }
  }
}

.Subhead--spacious {
  padding-bottom: .6em;
}

.Subhead-heading {
  line-height: 1.25;
  font-size: 2em !important;
}

.h100 {
  height: 100%;
}

.mw150 {
  max-width: 150px;
}

.mw970 {
  max-width: 970px;
}

.height-48 {
  height: 48px;
}

.mh-120 {
  min-height: 120px;
}

.mh-70 {
  min-height: 70px;
}

.mb-12 {
  margin-bottom: 12px !important;
}

.notFoundVideo {
  width: 100%; 
  max-width: 550px; 
  height: auto; 
  margin-top: 10px; 
  border-radius: 15px;
}

.blogPostIcon {
  width: 14px !important; 
  margin-right: 5px !important;
}

.blog-rss-icon {
  svg {
    width: 18px;
    height: 18px;
  }
  &:hover svg path {
    opacity: 0.7;
  }
}

.lh-ultra-condensed {
  line-height: 1.1;
}

.lh-sm-condensed {
  line-height: 1.35!important;
  @media (max-width: 544px) {
    line-height: 1.5!important;
  }
}

.mt3 {
  margin-top: 3px
}

.mr10 {
  margin-right: 10px
}

.ml5 {
  margin-left: 5px!important;
}

.w16h16 svg {
  width: 16px; 
  height: 16px;
}

.w30h30 {
  width: 30px; 
  height: 30px
}

.w35h28 {
  width: 35px; 
  height: 28px
}

.w60h24 {
  width: 60px; 
  height: 24px
}

.w46h24 {
  width: 46px; 
  height: 24px
}

.mb-1-sm-only {
  margin-bottom: 0 !important;
  @media (max-width: 544px) {
    margin-bottom: 4px !important;
  }
}

/*! Giscus  */
.giscus:not(:empty) {
  margin-top: 3rem !important;
}

/*! Colors */
$allcolors: #F05138 #555555 #89e051 #ccc #438eff #3572A5 
#3D6117 #f34b7d #b07219 #00ADD8 #e34c26 #563d7c #4F5D95
#41b883 #e38c00 #f1e05a #DA5B0B #2b7489;
@each $color in $allcolors {
  .color-#{unquote("\\" + $color)} {
    background-color: nth($color, 1);
  }
}
/*! purgecss end ignore */

